# haleidoscope

./: .ghci  .travis.yml  CHANGELOG.md  Makefile  README.md  haleidoscope.cabal  stack.yaml
app/: Main.hs
src/: Haleidoscope.hs
src/Haleidoscope/: AST.hs  Builder.hs  LLVM.hs  Lexer.x  Parser.y  REPL.hs
src/Haleidoscope/LLVM/: Builder.hs  Extra.hs
src/Haleidoscope/Lexer/: Types.hs
src/Haleidoscope/Parser/: Types.hs
src/Sandbox/Calc/: Parser.y
src/Sandbox/LLVM/: Manual.hs
src/Sandbox/Lexer/: WordCount.x
src/Sandbox/Lexing/: WordCount.x
src/Sandbox/Parsing/: AST.hs  Driver.hs  Eval.hs  Lexer.x  Parser.y
