cabal-version:       2.4
-- 3.0 is not supported by Stack yet
-- see: https://github.com/haskell/haskell-ide-engine/issues/1564
name:                haleidoscope
version:             0.1.0
synopsis:            Small functional programming language
description:         Small functional programming language (Tiger in Haskell)
homepage:            https://github.com/vyorkin/haleidoscope
bug-reports:         https://github.com/vyorkin/haleidoscope/issues
license:             MIT
license-file:        LICENSE
author:              Vasiliy Yorkin
maintainer:          vasiliy.yorkin@gmail.com
copyright:           2020 Vasiliy Yorkin
category:            Compilers/Interpreters
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.2

source-repository head
  type:                git
  location:            https://github.com/vyorkin/haleidoscope.git

library
  hs-source-dirs:      src
  exposed-modules:     Haleidoscope
                     , Haleidoscope.Lexer
                     , Haleidoscope.Lexer.Types
                     , Haleidoscope.AST
                     , Haleidoscope.REPL
                     , Haleidoscope.LLVM
                     , Haleidoscope.Builder

  other-modules:       Sandbox.Lexing.WordCount
                     , Sandbox.Parsing.AST
                     , Sandbox.Parsing.Eval
                     , Sandbox.Parsing.Lexer
                     , Sandbox.Parsing.Parser
                     , Sandbox.Parsing.Driver
                     , Sandbox.Calc.Parser

  build-depends:       base ^>= 4.13
                     , text ^>= 1.2
                     , utf8-string ^>= 1.0
                     -- programs (lexers) produced by alex use array package
                     , array ^>= 0.5
                     , containers ^>= 0.6
                     , transformers ^>= 0.5
                     , mtl ^>= 2.2
                     , llvm-hs-pure ^>= 9.0
                     , llvm-hs ^>= 9.0
                     , llvm-hs-pretty ^>= 0.9

  build-tool-depends:  alex:alex ^>= 3.2
                     , happy:happy ^>= 1.19

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

executable haleidoscope
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base
                     , haleidoscope

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

test-suite haleidoscope-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base
                     , haleidoscope

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
